--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -136,6 +136,8 @@ allow 149.56.44.47;
 allow 15.204.238.148;
 allow 152.53.133.14;
 allow 154.16.116.61;
+allow 154.213.185.165;
+allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.213.187.66;
@@ -517,7 +519,6 @@ allow 192.108.48.150;
 allow 192.42.116.13;
 allow 192.42.116.14;
 allow 192.42.116.15;
-allow 192.42.116.17;
 allow 192.42.116.173;
 allow 192.42.116.174;
 allow 192.42.116.175;
@@ -728,7 +729,6 @@ allow 2001:67c:6ec:203:192:42:116:219;
 allow 2001:67c:6ec:203:218:33ff:fe44:5513;
 allow 2001:67c:6ec:203:218:33ff:fe44:5514;
 allow 2001:67c:6ec:203:218:33ff:fe44:5515;
-allow 2001:67c:6ec:203:218:33ff:fe44:5517;
 allow 2001:67c:6ec:203:218:33ff:fe44:5518;
 allow 2001:67c:6ec:203:218:33ff:fe44:5519;
 allow 2001:67c:6ec:203:218:33ff:fe44:5520;
@@ -983,7 +983,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
-allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.94.211.25;
 allow 2400:8901::f03c:95ff:fe89:4a88;
@@ -1005,7 +1004,6 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -1353,6 +1351,8 @@ allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:655b::1;
+allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1726,6 +1726,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
