--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -271,6 +271,7 @@ allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.168.22.85;
 allow 185.170.114.25;
+allow 185.177.151.34;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
@@ -1082,6 +1083,7 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:6d42:1242:2b92::1;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
+allow 2a01:239:2be:1400::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1424,6 +1426,7 @@ allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:1fc0:1::c758:3168;
 allow 2a10:c800:1:9cc6::1;
+allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:5940:c826::2;
 allow 2a12:a800:1:1:194:26:192:161;
@@ -1548,7 +1551,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
@@ -1583,6 +1585,7 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1666,6 +1669,7 @@ allow 85.17.9.83;
 allow 85.235.144.146;
 allow 85.239.41.130;
 allow 85.93.218.204;
+allow 87.106.78.113;
 allow 87.118.110.27;
 allow 87.118.116.103;
 allow 87.118.116.12;
@@ -1686,7 +1690,6 @@ allow 89.221.215.139;
 allow 89.221.217.206;
 allow 89.234.157.254;
 allow 89.236.112.100;
-allow 89.37.95.34;
 allow 89.58.26.216;
 allow 89.58.41.156;
 allow 91.132.144.59;
@@ -1702,6 +1705,7 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
+allow 91.219.237.39;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
