--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -22,7 +22,6 @@ allow 104.244.73.190;
 allow 104.244.73.193;
 allow 104.244.73.43;
 allow 104.244.74.23;
-allow 104.244.74.97;
 allow 104.244.75.74;
 allow 104.244.77.192;
 allow 104.244.77.208;
@@ -195,7 +194,6 @@ allow 176.97.113.53;
 allow 176.97.114.202;
 allow 178.17.170.144;
 allow 178.17.170.23;
-allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
 allow 178.175.148.209;
@@ -268,6 +266,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.168.22.85;
@@ -293,6 +292,22 @@ allow 185.195.71.9;
 allow 185.207.107.130;
 allow 185.207.107.216;
 allow 185.219.82.176;
+allow 185.220.100.240;
+allow 185.220.100.241;
+allow 185.220.100.242;
+allow 185.220.100.243;
+allow 185.220.100.244;
+allow 185.220.100.245;
+allow 185.220.100.246;
+allow 185.220.100.247;
+allow 185.220.100.248;
+allow 185.220.100.249;
+allow 185.220.100.250;
+allow 185.220.100.251;
+allow 185.220.100.252;
+allow 185.220.100.253;
+allow 185.220.100.254;
+allow 185.220.100.255;
 allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
@@ -563,6 +578,7 @@ allow 192.42.116.28;
 allow 192.99.149.111;
 allow 193.105.134.150;
 allow 193.105.134.155;
+allow 193.187.90.106;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
@@ -642,7 +658,6 @@ allow 199.195.251.78;
 allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
-allow 199.195.253.247;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -878,7 +893,6 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
-allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.184.48.78;
@@ -926,7 +940,6 @@ allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
-allow 2605:6400:10:16e:e9da:a184:bfe1:e727;
 allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:4ed:1:1:1:1;
@@ -990,7 +1003,6 @@ allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f858:2704:73e1:7085:12ef;
-allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
@@ -1059,12 +1071,12 @@ allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
-allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:6d42:1242:2b92::1;
+allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:5e0:36:c311::1;
@@ -1186,6 +1198,22 @@ allow 2a09:61c0::22;
 allow 2a0a:3840:8078:22:0:504e:16da:1337;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
+allow 2a0b:f4c0:16c:10::1;
+allow 2a0b:f4c0:16c:1::1;
+allow 2a0b:f4c0:16c:11::1;
+allow 2a0b:f4c0:16c:12::1;
+allow 2a0b:f4c0:16c:13::1;
+allow 2a0b:f4c0:16c:14::1;
+allow 2a0b:f4c0:16c:15::1;
+allow 2a0b:f4c0:16c:16::1;
+allow 2a0b:f4c0:16c:2::1;
+allow 2a0b:f4c0:16c:3::1;
+allow 2a0b:f4c0:16c:4::1;
+allow 2a0b:f4c0:16c:5::1;
+allow 2a0b:f4c0:16c:6::1;
+allow 2a0b:f4c0:16c:7::1;
+allow 2a0b:f4c0:16c:8::1;
+allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
