--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -146,7 +146,6 @@ set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
-set_real_ip_from 2605:6400:10:16e:e9da:a184:bfe1:e727;
 set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:4ed:1:1:1:1;
@@ -210,7 +209,6 @@ set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
-set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 set_real_ip_from 2605:6400:30:f8d5::1;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
@@ -278,12 +276,12 @@ set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
-set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:44::326d;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:6d42:1242:2b92::1;
+set_real_ip_from 2a00:74a0:e000:1003::114;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:1:185:246:84:179:1;
 set_real_ip_from 2a01:5e0:36:c311::1;
@@ -405,6 +403,22 @@ set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a0a:3840:8078:22:0:504e:16da:1337;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0b:4140:6c6c::2;
+set_real_ip_from 2a0b:f4c0:16c:10::1;
+set_real_ip_from 2a0b:f4c0:16c:1::1;
+set_real_ip_from 2a0b:f4c0:16c:11::1;
+set_real_ip_from 2a0b:f4c0:16c:12::1;
+set_real_ip_from 2a0b:f4c0:16c:13::1;
+set_real_ip_from 2a0b:f4c0:16c:14::1;
+set_real_ip_from 2a0b:f4c0:16c:15::1;
+set_real_ip_from 2a0b:f4c0:16c:16::1;
+set_real_ip_from 2a0b:f4c0:16c:2::1;
+set_real_ip_from 2a0b:f4c0:16c:3::1;
+set_real_ip_from 2a0b:f4c0:16c:4::1;
+set_real_ip_from 2a0b:f4c0:16c:5::1;
+set_real_ip_from 2a0b:f4c0:16c:6::1;
+set_real_ip_from 2a0b:f4c0:16c:7::1;
+set_real_ip_from 2a0b:f4c0:16c:8::1;
+set_real_ip_from 2a0b:f4c0:16c:9::1;
 set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
